...
    name = "Light Mode")
@Composable
fun PreviewEmailVerifyScreen(){
    var updateEmail by remember { mutableStateOf("") }
    CharTrackerTheme {
        EmailVerifyScreen(
            email = "test@email.com",
            updatedEmail = updateEmail,
            onUpdatedEmailChange = {new -> updateEmail = new},
            submitUpdatedEmail = {},
            updateEmailVerificationSent = false,
            resetUpdateEmailVerificationSent = {},
            invalidUser = false,
...
